attempting to fix grey textarea issue on mobile

--- a/src/app/molecules/ChatBubble/ChatBubble.css
+++ b/src/app/molecules/ChatBubble/ChatBubble.css
@@ -22,18 +22,30 @@
 }
 
 .chatBubble {
-  box-sizing: border-box;
-  background-color: #e8e8e8;
-  border: none;
   color: black;
-  font-family: Kumbh Sans;
   padding: 0.5rem 0.5rem;
   border-radius: 0.75rem;
   font-size: 0.65rem;
-  text-align: left;
   margin-bottom: 0.25rem;
-  resize: none;
   width: 60%;
+}
+
+.chatBubbleTextArea {
+  box-sizing: border-box;
+  font-family: Kumbh Sans;
+  font-size: 0.65rem;
+  text-align: left;
+  padding: 0;
+  resize: none;
+  border: none;
+  color: black;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+
+.chatBubbleTextArea:focus {
+  outline: none;
 }
 
 .modelBubble {
